--- a/src/theme/tables.scss
+++ b/src/theme/tables.scss
@@ -16,3 +16,10 @@ th.mat-header-cell {
 .mat-row:nth-child(odd){
     background-color:silver;
     }
+/*.ag-row:nth-child(even){
+        background-color: LightGray;
+        }
+    
+.ag-row:nth-child(odd){
+        background-color:silver;
+       }    */
