--- a/src/app/protected/cephalix/customers/customers.page.html
+++ b/src/app/protected/cephalix/customers/customers.page.html
@@ -1,124 +1,33 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-content scroll-x="true" scroll-y="true">
-  <ion-searchbar (keyup)="doFilter($event.target.value)"></ion-searchbar>
-  <mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-    <ng-container matColumnDef="select">
-      <mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-          [indeterminate]="selection.hasValue() && !isAllSelected()">
-        </mat-checkbox>
-      </mat-header-cell>
-      <mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-          [checked]="selection.isSelected(row)">
-        </mat-checkbox>
-      </mat-cell>
-    </ng-container>
-
-    <!-- ng-container *ngFor="let key of objectKeys" [ngSwitch]="typeOf(key)"  matColumnDef="{{ key }}">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ key | translate }}</mat-header-cell>
-        <ngSwitchCase="'string'" mat-cell *matCellDef="let object"> object[key]</mat-cell>
-        <ngSwitchCase="'date'" mat-cell *matCellDef="let object">{{ object[key]  | date:'yyyy-MM-dd'}}</mat-cell>
-    </ng-container -->
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'id' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.id}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="uuid">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'uuid' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.uuid}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="address1">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'address1' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.address1}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="address2">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'address2' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.address2}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="category">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'category' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.category}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="locality">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'locality' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.locality}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="contact">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'contact' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.contact}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="country">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'country' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.country}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="description">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'description' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.description}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.name}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="name2">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name2' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.name2}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="postalCode">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'postalCode' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.postalCode}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="recDate">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'recDate' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.recDate  | date:'yyyy-MM-dd'  }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="state">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'state' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.state}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="telephone">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'telephone' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.telephone}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef>
-        <ion-button size="small" (click)="redirectToEdit($event,null)">
-          <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
-        </ion-button>
-        <ion-button size="small" (click)="openActions($event)">
-          <ion-icon slot="icon-only" name="menu"></ion-icon>
-        </ion-button>
-        <ion-button size="small" (click)="openCollums($event)">
-          <ion-icon slot="icon-only" name="apps"></ion-icon>
-        </ion-button>
-      </mat-header-cell>
-      <mat-cell *matCellDef="let object" (click)="$event.stopPropagation()">
-        <ion-button fill="clear" size="small" (click)="redirectToEdit($event,object)">
-          <ion-icon slot="icon-only" name="create-outline"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" size="small" (click)="redirectToDelete(object)">
-          <ion-icon slot="icon-only" color="danger" name="trash-outline"></ion-icon>
-        </ion-button>
-      </mat-cell>
-    </ng-container>
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></mat-row>
-  </mat-table>
-
-  <!-- mat-paginator [pageSizeOptions]="[1, 2, 5]" showFirstLastButtons></mat-paginator -->
-
+<ion-row class="header-row"></ion-row>
+<ion-content (window:resize)="onResize($event)">
+  <ion-card>
+    <ion-card-header>
+      <ion-row class="ion-align-items-center">
+        <ion-col size="3">
+          <input matInput placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()"
+            id="quickFilter">
+        </ion-col>
+        <ion-col size="7">
+        </ion-col>
+        <ion-col size="2">
+          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new customer' | translate }}">
+            <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+          </ion-button>
+          <ion-button size="small" (click)="openActions($event)" matTooltip="{{'apply actions on the selected objects' | translate }}" >
+            <ion-icon slot="icon-only" name="menu"></ion-icon>
+          </ion-button>
+          <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'select the columns to show' | translate }}">
+            <ion-icon slot="icon-only" name="apps"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <ion-card-content>
+      <ag-grid-angular style="width: 100%; height: 450px;" class="ag-theme-balham" [gridOptions]="gridOptions"
+        [rowData]="rowData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="rowSelection"
+        (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()" id="agGridTable">
+      </ag-grid-angular>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
