--- a/src/app/protected/cephalix/institutes/institutes.page.html
+++ b/src/app/protected/cephalix/institutes/institutes.page.html
@@ -1,213 +1,33 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row">
-</ion-row>
-<ion-content scroll-x="true" scroll-y="true">
+<ion-row class="header-row"></ion-row>
+<ion-content (window:resize)="onResize($event)">
   <ion-card>
     <ion-card-header>
       <ion-row class="ion-align-items-center">
         <ion-col size="3">
-            <ion-searchbar (keyup)="doFilter($event.target.value)"></ion-searchbar>
+          <input matInput placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()"
+            id="quickFilter">
         </ion-col>
-        <ion-col size="7" >    
+        <ion-col size="7">
         </ion-col>
-        <ion-col size="2"  >
-          <ion-button size="small" (click)="redirectToEdit($event,null)">
-          <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
-        </ion-button>
-        <ion-button size="small" (click)="openActions($event)">
-          <ion-icon slot="icon-only" name="menu"></ion-icon>
-        </ion-button>
-        <ion-button size="small" (click)="openCollums($event)">
-          <ion-icon slot="icon-only" name="apps"></ion-icon>
-        </ion-button>
+        <ion-col size="2">
+          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new institute' | translate }}">
+            <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+          </ion-button>
+          <ion-button size="small" (click)="openActions($event)" matTooltip="{{'apply actions on the selected objects' | translate }}" >
+            <ion-icon slot="icon-only" name="menu"></ion-icon>
+          </ion-button>
+          <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'select the columns to show' | translate }}">
+            <ion-icon slot="icon-only" name="apps"></ion-icon>
+          </ion-button>
         </ion-col>
       </ion-row>
-        
-         
     </ion-card-header>
-  <ion-card-content>
-  <mat-table [dataSource]="dataSource" matSort>
-    <ng-container matColumnDef="select">
-      <mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-          [indeterminate]="selection.hasValue() && !isAllSelected()">
-        </mat-checkbox>
-      </mat-header-cell>
-      <mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-          [checked]="selection.isSelected(row)">
-        </mat-checkbox>
-      </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'id' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.id}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="uuid">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'uuid' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.uuid}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="adminPW">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'adminPW' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.adminPW}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="anonDhcpNetwork">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'anonDhcpNetwork' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.anonDhcpNetwork}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="cephalixPW">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'cephalixPW' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.cephalixPW}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="domain">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'domain' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.domain}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="firstRoom">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'firstRoom' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.firstRoom}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="gwTrNet">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'gwTrNet' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.gwTrNet}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="ipAdmin">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'ipAdmin' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.ipAdmin}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="ipBackup">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'ipBackup' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.ipBackup}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="ipGateway">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'ipGateway' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.ipGateway}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="ipMail">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'ipMail' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.ipMail}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="ipPrint">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'ipPrint' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.ipPrint}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="ipProxy">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'ipProxy' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.ipProxy}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="ipTrNet">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'ipTrNet' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.ipTrNet}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="ipVPN">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'ipVPN' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.ipVPN}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="locality">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'locality' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.locality}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.name}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="network">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'network' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.network}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="serverNetwork">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'serverNetwork' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.serverNetwork}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="nmTrNet">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'nmTrNet' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.nmTrNet}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="type">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'type' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.type}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="deleted">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'deleted' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.deleted}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="recDate">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'recDate' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.recDate}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="validity">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'validity' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.validity  | date:'yyyy-MM-dd' }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="ayTemplate">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'ayTemplate' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.ayTemplate}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="customerId">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'customerId' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.customerId}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="regCode">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'regCode' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let institute"> {{institute.regCode}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef>
-        <!--ion-button size="small" (click)="redirectToEdit($event,null)">
-          <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
-        </ion-button>
-        <ion-button size="small" (click)="openActions($event)">
-          <ion-icon slot="icon-only" name="menu"></ion-icon>
-        </ion-button>
-        <ion-button size="small" (click)="openCollums($event)">
-          <ion-icon slot="icon-only" name="apps"></ion-icon>
-        </ion-button-->
-      </mat-header-cell>
-      <mat-cell *matCellDef="let object" (click)="$event.stopPropagation()">
-        <ion-button fill="clear" size="small" (click)="redirectToEdit($event,object)">
-          <ion-icon slot="icon-only" name="create-outline"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" size="small" (click)="redirectToDelete(object)">
-          <ion-icon slot="icon-only" color="danger" name="trash-outline"></ion-icon>
-        </ion-button>
-      </mat-cell>
-    </ng-container>
-    <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns" (click)="selection.toggle(row)"></mat-row>
-
-  </mat-table>
-      </ion-card-content>
-    </ion-card>
-
-  <mat-paginator [pageSizeOptions]="[20,50,100]" showFirstLastButtons></mat-paginator>
-
+    <ion-card-content>
+      <ag-grid-angular style="width: 100%; height: 450px;" class="ag-theme-material" [gridOptions]="gridOptions"
+        [rowData]="rowData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="rowSelection"
+        (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()" id="agGridTable">
+      </ag-grid-angular>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
