--- a/src/app/protected/cranix/users/users.page.html
+++ b/src/app/protected/cranix/users/users.page.html
@@ -1,120 +1,33 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-content scroll-x="true" scroll-y="true">
-  <ion-searchbar (keyup)="doFilter($event.target.value)"></ion-searchbar>
-  <mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-    <ng-container matColumnDef="select">
-      <mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-          [indeterminate]="selection.hasValue() && !isAllSelected()">
-        </mat-checkbox>
-      </mat-header-cell>
-      <mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-          [checked]="selection.isSelected(row)">
-        </mat-checkbox>
-      </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'id' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.id}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="surName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'surName' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.surName}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="givenName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'givenName' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.givenName}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="birthDay">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'birthDay' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.birthDay | date:'yyyy-MM-dd'  }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="password">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'password' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.password}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="uuid">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'uuid' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.uuid}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="uid">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'uid' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.uid}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="role">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'role' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.role}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="classes">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'classes' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.classes}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="msQuota">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'msQuota' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.msQuota}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="fsQuota">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'fsQuota' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.fsQuota}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="msQuotaUsed">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'msQuotaUsed' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.msQuotaUsed}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="fsQuotaUsed">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'fsQuotaUsed' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.fsQuotaUsed}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="mailAliases">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'mailAliases' | translate }}</mat-header-cell>
-      <mat-cell *matCellDef="let object"> {{object.mailAliases}} </mat-cell>
-    </ng-container>
-
-
-    <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef>
-        <ion-button size="small" (click)="redirectToEdit($event,null)">
-          <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
-        </ion-button>
-        <ion-button size="small" (click)="openActions($event)">
-          <ion-icon slot="icon-only" name="menu"></ion-icon>
-        </ion-button>
-        <ion-button size="small" (click)="openCollums($event)">
-          <ion-icon slot="icon-only" name="apps"></ion-icon>
-        </ion-button>
-      </mat-header-cell>
-      <mat-cell *matCellDef="let object" (click)="$event.stopPropagation()">
-        <ion-button fill="clear" size="small" (click)="redirectToEdit($event,object)">
-          <ion-icon slot="icon-only" name="create"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" size="small" (click)="redirectToSetPassword($event,object)">
-          <ion-icon slot="icon-only" name="key"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" size="small" (click)="redirectToDelete(object)">
-          <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
-        </ion-button>
-      </mat-cell>
-    </ng-container>
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></mat-row>
-
-  </mat-table>
-
-  <!-- mat-paginator [pageSizeOptions]="[1, 2, 5]" showFirstLastButtons></mat-paginator -->
-
+<ion-row class="header-row"></ion-row>
+<ion-content (window:resize)="onResize($event)">
+  <ion-card>
+    <ion-card-header>
+      <ion-row class="ion-align-items-center">
+        <ion-col size="3">
+          <input matInput placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()"
+            id="quickFilter">
+        </ion-col>
+        <ion-col size="7">
+        </ion-col>
+        <ion-col size="2">
+          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new institute' | translate }}">
+            <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+          </ion-button>
+          <ion-button size="small" (click)="openActions($event)" matTooltip="{{'apply actions on the selected objects' | translate }}" >
+            <ion-icon slot="icon-only" name="menu"></ion-icon>
+          </ion-button>
+          <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'select the columns to show' | translate }}">
+            <ion-icon slot="icon-only" name="apps"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <ion-card-content>
+      <ag-grid-angular style="width: 100%; height: 450px;" class="ag-theme-fresh" [gridOptions]="gridOptions"
+        [rowData]="rowData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="rowSelection"
+        (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()" id="agGridTable">
+      </ag-grid-angular>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
