--- a/src/app/protected/cranix/groups/details/members/group-members.page.html
+++ b/src/app/protected/cranix/groups/details/members/group-members.page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <ion-card>
     <ion-card-header color="amber">
-      <ion-card-title>{{ 'Modify members of selected group' | translate}}: "{{group.name}}" ({{group.groupType | translate}} {{group.description}}
+      <ion-card-title>{{ 'Modify members of selected group' | translate}}: "{{group.name}}"  {{group.description}} {{group.groupType | translate}}
       </ion-card-title>
     </ion-card-header>
     <ion-card-content>
