--- a/src/global.scss
+++ b/src/global.scss
@@ -36,4 +36,4 @@
 @import "~ag-grid-community/dist/styles/ag-theme-material.css";
 
 /* Custom */
- //@import "theme/tables.scss"; 
+@import "theme/ion-custom.scss"; 
