Fix object name.

--- a/src/app/protected/cranix/rooms/details/printers/room-printers.page.html
+++ b/src/app/protected/cranix/rooms/details/printers/room-printers.page.html
@@ -10,7 +10,7 @@
       <ion-col>
   <ion-card>
     <ion-card-header color="amber">
-      <ion-card-title>{{ 'Modify printes of selected room' | translate}}: "{{device.name}}"  {{device.description}}
+      <ion-card-title>{{ 'Modify printes of selected room' | translate}}: "{{room.name}}"  {{room.description}}
       </ion-card-title>
     </ion-card-header>
     <ion-card-content>
