--- a/src/app/protected/cranix/users/details/groups/user-groups.page.html
+++ b/src/app/protected/cranix/users/details/groups/user-groups.page.html
@@ -14,18 +14,18 @@
     <ion-card-content>
       <ion-grid>
         <ion-row>
-          <ion-col sizeLg=5 sizeSm=12>
+          <ion-col size=12 sizeMd=12 sizeLg=5 sizeXl=5>
             <ion-item lines="none">
               <ion-label  position="stacked">{{ 'member of groups' | translate }}</ion-label>
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
                 id="memberFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-fresh" [gridOptions]="memberOptions"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-balham" [gridOptions]="memberOptions"
               [rowData]="memberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="memberSelection"
               (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable">
             </ag-grid-angular>
           </ion-col>
-          <ion-col  sizeLg=1 sizeSm=12>
+          <ion-col  size=12 sizeMd=12 sizeLg=1 sizeXl=1>
             <ion-item lines="none">
               <ion-label  position="stacked">  </ion-label>
               <ion-button slot="" size="small" (click)="applyChanges()"
@@ -34,13 +34,13 @@
               </ion-button>
             </ion-item>
           </ion-col>
-          <ion-col sizeLg=5 sizeSm=12>
+          <ion-col size=12 sizeMd=12 sizeLg=5 sizeXl=5>
             <ion-item lines="none">
               <ion-label position="stacked">{{ 'available groups' | translate }}</ion-label>
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onNonMemberFilterChanged()" id="nonMemberFilter">
               </ion-input>
             </ion-item>
-              <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-fresh"
+              <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-balham"
                 [gridOptions]="noMemberOptions" [rowData]="noMemberData" [columnDefs]="columnDefs" [context]="context"
                 [rowSelection]="noMemberSelection" (gridReady)="onNoMemberReady($event)"
                 (selectionChanged)="onNoMemberSelectionChanged()" id="noMemberTable">
