fixed guard, added style for table

--- a/src/app/protected/cephalix/institutes/institutes.page.html
+++ b/src/app/protected/cephalix/institutes/institutes.page.html
@@ -5,8 +5,11 @@
     <ion-card-header>
       <ion-row class="ion-align-items-center">
         <ion-col size="3">
-          <input matInput placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()"
+          <ion-item>
+            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()"
             id="quickFilter">
+            </ion-input>
+          </ion-item>
         </ion-col>
         <ion-col size="7">
         </ion-col>
