Reorganize details pages. User row with class header-raw for showing actual selected object.

--- a/src/app/protected/cranix/users/details/edit/user-edit.page.html
+++ b/src/app/protected/cranix/users/details/edit/user-edit.page.html
@@ -3,65 +3,64 @@
     <ion-title>edit</ion-title>
   </ion-toolbar>
 </ion-header>
-
+<ion-row class="header-row">
+  <ion-col size=12>
+    <ion-card-title color="primary">{{ 'Modify selected user:' | translate}} "{{object.uid}}" ({{object.givenName}}
+      {{object.surName}})
+    </ion-card-title>
+  </ion-col>
+</ion-row>
 <ion-content>
   <ion-card>
-    <ion-card-header color="amber">
-      <ion-row class="ion-align-items-center">
-        <ion-col size=12>
-          <ion-card-title color="primary">{{ 'Modify selected user:' | translate}} "{{object.uid}}" ({{object.givenName}} {{object.surName}})
-          </ion-card-title>
-        </ion-col>
-      </ion-row>
-    </ion-card-header>
     <ion-card-content>
       <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
         <ion-grid>
           <ion-row>
-              <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3 *ngFor="let key of objectKeys;"  [ngSwitch]="objectService.typeOf(key,object,'edit')">
-                <ion-item *ngSwitchCase="'booleanTrue'">
-                  <ion-label>{{ key | translate }}</ion-label>
-                  <ion-toggle slot="start" formControlName="{{key}}" color="secondary" checked></ion-toggle>
-                </ion-item>
-                <ion-item *ngSwitchCase="'booleanFalse'">
-                  <ion-label>{{ key | translate }}</ion-label>
-                  <ion-toggle slot="start" formControlName="{{key}}" color="secondary"></ion-toggle>
-                </ion-item>
-                <ion-item *ngSwitchCase="'string'">
-                  <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
-                  <!--ion-item *ngIf="editForm.controls[key].hasError('required') && editForm.controls[key].touched"-->
-                  <ion-label position="stacked"
-                    *ngIf="editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
-                    {{ 'This field is required!' | translate }}</ion-label>
-                  <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
-                    <ion-select type="text" formControlName="{{key}}" [compareWith]="objectService.compareFn"
-                      [required]="objectService.required[key]">
-                      <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
-                        {{option | translate}}</ion-select-option>
-                    </ion-select>
-                  </ng-template>
-                  <ng-template #elseBlock>
-                    <ion-input type="text" formControlName="{{key}}" value="{{object[key]}}"
-                      [required]="objectService.required[key]"></ion-input>
-                  </ng-template>
-                </ion-item>
-                <ion-item *ngSwitchCase="'stringRO'">
-                  <ion-label position="stacked">{{ key | translate }}</ion-label>
-                  <ion-input color="tertiary" type="text" formControlName="{{key}}" value="{{object[key]}}" readonly>
-                  </ion-input>
-                </ion-item>
-                <ion-item *ngSwitchCase="'date'">
-                  <ion-label>{{ key | translate }}</ion-label>
-                  <ion-datetime formControlName="{{key}}" max="2100" value="{{object[key] | date:'yyyy-MM-dd'}}">
-                  </ion-datetime>
-                </ion-item>
-                <ion-item *ngSwitchCase="'date-time'">
-                  <ion-label>{{ key | translate }}</ion-label>
-                  <ion-datetime formControlName="{{key}}" max="2100"
-                    value="{{object[key] | date:'yyyy-MM-dd HH:mm:ss Z'}}">
-                  </ion-datetime>
-                </ion-item>
-              </ion-col>
+            <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3 *ngFor="let key of objectKeys;"
+              [ngSwitch]="objectService.typeOf(key,object,'edit')">
+              <ion-item *ngSwitchCase="'booleanTrue'">
+                <ion-label>{{ key | translate }}</ion-label>
+                <ion-toggle slot="start" formControlName="{{key}}" color="secondary" checked></ion-toggle>
+              </ion-item>
+              <ion-item *ngSwitchCase="'booleanFalse'">
+                <ion-label>{{ key | translate }}</ion-label>
+                <ion-toggle slot="start" formControlName="{{key}}" color="secondary"></ion-toggle>
+              </ion-item>
+              <ion-item *ngSwitchCase="'string'">
+                <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
+                <!--ion-item *ngIf="editForm.controls[key].hasError('required') && editForm.controls[key].touched"-->
+                <ion-label position="stacked"
+                  *ngIf="editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
+                  {{ 'This field is required!' | translate }}</ion-label>
+                <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
+                  <ion-select type="text" formControlName="{{key}}" [compareWith]="objectService.compareFn"
+                    [required]="objectService.required[key]">
+                    <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
+                      {{option | translate}}</ion-select-option>
+                  </ion-select>
+                </ng-template>
+                <ng-template #elseBlock>
+                  <ion-input type="text" formControlName="{{key}}" value="{{object[key]}}"
+                    [required]="objectService.required[key]"></ion-input>
+                </ng-template>
+              </ion-item>
+              <ion-item *ngSwitchCase="'stringRO'">
+                <ion-label position="stacked">{{ key | translate }}</ion-label>
+                <ion-input color="tertiary" type="text" formControlName="{{key}}" value="{{object[key]}}" readonly>
+                </ion-input>
+              </ion-item>
+              <ion-item *ngSwitchCase="'date'">
+                <ion-label>{{ key | translate }}</ion-label>
+                <ion-datetime formControlName="{{key}}" max="2100" value="{{object[key] | date:'yyyy-MM-dd'}}">
+                </ion-datetime>
+              </ion-item>
+              <ion-item *ngSwitchCase="'date-time'">
+                <ion-label>{{ key | translate }}</ion-label>
+                <ion-datetime formControlName="{{key}}" max="2100"
+                  value="{{object[key] | date:'yyyy-MM-dd HH:mm:ss Z'}}">
+                </ion-datetime>
+              </ion-item>
+            </ion-col>
           </ion-row>
         </ion-grid>
         <div class="ion-padding ion-text-center">
