--- a/src/app/protected/cranix/users/details/groups/user-groups.page.html
+++ b/src/app/protected/cranix/users/details/groups/user-groups.page.html
@@ -3,20 +3,21 @@
     <ion-title>edit</ion-title>
   </ion-toolbar>
 </ion-header>
-
+<ion-row class="header-row">
+  <ion-col size=12>
+    <ion-title>{{ 'Modify groups of selected user' | translate}}: "{{user.uid}}" ({{user.givenName}}
+      {{user.surName}})
+    </ion-title>
+  </ion-col>
+</ion-row>
 <ion-content>
   <ion-card>
-    <ion-card-header color="amber">
-      <ion-card-title>{{ 'Modify groups of selected user' | translate}}: "{{user.uid}}" ({{user.givenName}}
-        {{user.surName}})
-      </ion-card-title>
-    </ion-card-header>
     <ion-card-content>
       <ion-grid>
         <ion-row>
           <ion-col size=12 sizeMd=12 sizeLg=5 sizeXl=5>
             <ion-item lines="none">
-              <ion-label  position="stacked">{{ 'member of groups' | translate }}</ion-label>
+              <ion-label position="stacked">{{ 'member of groups' | translate }}</ion-label>
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
                 id="memberFilter"></ion-input>
             </ion-item>
@@ -25,9 +26,9 @@
               (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable">
             </ag-grid-angular>
           </ion-col>
-          <ion-col  size=12 sizeMd=12 sizeLg=1 sizeXl=1>
+          <ion-col size=12 sizeMd=12 sizeLg=1 sizeXl=1>
             <ion-item lines="none">
-              <ion-label  position="stacked">  </ion-label>
+              <ion-label position="stacked"> </ion-label>
               <ion-button slot="" size="small" (click)="applyChanges()"
                 matTooltip="{{'add remove user to/from the selected groups' | translate }}">
                 <ion-icon slot="icon-only" name="code-outline"></ion-icon>
@@ -37,14 +38,15 @@
           <ion-col size=12 sizeMd=12 sizeLg=5 sizeXl=5>
             <ion-item lines="none">
               <ion-label position="stacked">{{ 'available groups' | translate }}</ion-label>
-              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onNonMemberFilterChanged()" id="nonMemberFilter">
+              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onNonMemberFilterChanged()"
+                id="nonMemberFilter">
               </ion-input>
             </ion-item>
-              <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-balham"
-                [gridOptions]="noMemberOptions" [rowData]="noMemberData" [columnDefs]="columnDefs" [context]="context"
-                [rowSelection]="noMemberSelection" (gridReady)="onNoMemberReady($event)"
-                (selectionChanged)="onNoMemberSelectionChanged()" id="noMemberTable">
-              </ag-grid-angular>
+            <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-balham" [gridOptions]="noMemberOptions"
+              [rowData]="noMemberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="noMemberSelection"
+              (gridReady)="onNoMemberReady($event)" (selectionChanged)="onNoMemberSelectionChanged()"
+              id="noMemberTable">
+            </ag-grid-angular>
           </ion-col>
         </ion-row>
       </ion-grid>
