--- a/src/app/protected/cephalix/institutes/details/notices/institute-notices.component.html
+++ b/src/app/protected/cephalix/institutes/details/notices/institute-notices.component.html
@@ -1,27 +1,25 @@
-<cranix-toolbar></cranix-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>edit</ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-row class="header-row">
+  <ion-col size=" 9">
+    <ion-title>{{ 'Notices to the selected institute' | translate}}: "{{object.name}}"</ion-title>
+  </ion-col>
+  <ion-col size="1">
+  </ion-col>
+  <ion-col size="2">
+    <ion-button size="small" (click)="redirectToAdd($event)" matTooltip="{{'create a new ticket' | translate }}">
+      <ion-icon name="add-circle-outline"></ion-icon>
+    </ion-button>
+  </ion-col>
+</ion-row>
 <ion-content>
-  <ion-card>
-    <ion-card-header>
-      <ion-row class="ion-align-items-center">
-        <ion-col size="9">
-          <ion-card-title>{{ 'Notices to the selected institute' | translate}}: "{{object.name}}"</ion-card-title>
-        </ion-col>
-        <ion-col size="1">
-        </ion-col>
-        <ion-col size="2">
-          <ion-button size="small" (click)="redirectToAdd($event)"
-            matTooltip="{{'create a new ticket' | translate }}">
-            <ion-icon name="add-circle-outline"></ion-icon>
-          </ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-card-header>
-  </ion-card>
-
   <ion-card *ngFor="let notice of notices">
     <ion-card-header>
-      <ion-card-title>{{notice.title}}</ion-card-title>
-      <ion-card-subtitle>{{notice.noticeType}} {{ 'created' | translate }} {{ notice.created | date:'yy-MM-dd HH:mm' }}
+      <ion-card-title>{{notice.noticeType}}: "{{notice.title}}"</ion-card-title>
+      <ion-card-subtitle> {{ 'created' | translate }} {{ notice.created | date:'yy-MM-dd HH:mm' }} {{ 'reminder' | translate}} {{ notice.reminder | date:'yy-MM-dd HH:mm' }}
       </ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
