--- a/src/app/protected/cranix/rooms/details/printers/room-printers.page.html
+++ b/src/app/protected/cranix/rooms/details/printers/room-printers.page.html
@@ -3,39 +3,45 @@
     <ion-title>edit</ion-title>
   </ion-toolbar>
 </ion-header>
-
-<!--ion-content-->
+<ion-row class="header-row">
+  <ion-col size=12>
+    <ion-title>{{ 'Modify printes of selected room' | translate}}: "{{room.name}}" {{room.description}}
+    </ion-title>
+  </ion-col>
+</ion-row>
+<ion-content>
   <ion-grid>
     <ion-row class="ion-justify-content-center">
-      <ion-col>
-  <ion-card>
-    <ion-card-header color="amber">
-      <ion-card-title>{{ 'Modify printes of selected room' | translate}}: "{{room.name}}"  {{room.description}}
-      </ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <form [formGroup]="editPrinter" (ngSubmit)="onSubmit(editPrinter.value)">
-      <ion-list>
-        <ion-item>
-          <ion-label>{{"Default Printer" | translate}}</ion-label>
-          <ion-select type="text" [compareWith]="objectService.compareFn"  formControlName="defaultPrinter">
-            <ion-select-option  *ngFor="let printer of allDefaultPrinters"  value="{{printer.id}}">{{ printer.name }}</ion-select-option>
-          </ion-select>
-        </ion-item>
-        <ion-item>
-          <ion-label>{{"Available Printers" | translate}}</ion-label>
-          <ion-select type="text"  [(value)]="printers.availablePrinters" multiple="true" [compareWith]="objectService.compareFn" formControlName="availablePrinters">
-            <ion-select-option  *ngFor="let printer of allPrinters"  value="{{printer.id}}">{{ printer.name }}</ion-select-option>
-          </ion-select>
-        </ion-item>
-      </ion-list>
-      <div class="ion-padding ion-text-center">
-        <ion-button type="submit" class="ion-no-margin">{{ 'apply' | translate }}</ion-button>
-      </div>
-      </form>
-    </ion-card-content>
-  </ion-card>
-</ion-col>
-</ion-row>
-</ion-grid>
-<!--/ion-content-->
+      <ion-col size=0 sizeMd=0 sizeLg=4 sizeXl=4></ion-col>
+      <ion-col size=12 sizeMd=12 sizeLg=4 sizeXl=4>
+        <ion-card>
+          <ion-card-content>
+            <form [formGroup]="editPrinter" (ngSubmit)="onSubmit(editPrinter.value)">
+              <ion-list>
+                <ion-item>
+                  <ion-label>{{"Default Printer" | translate}}</ion-label>
+                  <ion-select type="text" [compareWith]="objectService.compareFn" formControlName="defaultPrinter">
+                    <ion-select-option *ngFor="let printer of allDefaultPrinters" value="{{printer.id}}">
+                      {{ printer.name }}</ion-select-option>
+                  </ion-select>
+                </ion-item>
+                <ion-item>
+                  <ion-label>{{"Available Printers" | translate}}</ion-label>
+                  <ion-select type="text" [(value)]="printers.availablePrinters" multiple="true"
+                    [compareWith]="objectService.compareFn" formControlName="availablePrinters">
+                    <ion-select-option *ngFor="let printer of allPrinters" value="{{printer.id}}">{{ printer.name }}
+                    </ion-select-option>
+                  </ion-select>
+                </ion-item>
+              </ion-list>
+              <div class="ion-padding ion-text-center">
+                <ion-button type="submit" class="ion-no-margin">{{ 'apply' | translate }}</ion-button>
+              </div>
+            </form>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size=0 sizeMd=0 sizeLg=4 sizeXl=4></ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-content>
