Integrating ag-grid-enterprise. Implementing hwconf details. Move ion-card-header into ion-raw class = header-raw in the details pages.

--- a/src/app/protected/cranix/devices/devices.page.html
+++ b/src/app/protected/cranix/devices/devices.page.html
@@ -1,5 +1,9 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row"></ion-row>
+<ion-row class="header-row">
+  <ion-col size=6>
+    <ion-title>{{'Edit devices' | translate}}</ion-title>
+  </ion-col>
+</ion-row>
 <ion-content (window:resize)="onResize($event)">
   <ion-card>
     <ion-card-header>
