Make license save! Enhance translations.

--- a/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
+++ b/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
@@ -5,7 +5,7 @@
 </ion-header>
 <ion-row class="header-row">
   <ion-col size=12>
-    <ion-title color="primary">>{{ 'Modify selected institute' | translate}}: "{{object.name}}"</ion-title>
+    <ion-title>{{ 'Modify selected institute:' | translate}} "{{object.name}}"</ion-title>
   </ion-col>
 </ion-row>
 
