--- a/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
+++ b/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
@@ -16,7 +16,7 @@
       <ion-grid>
         <ion-row>
           <ion-col size=12>
-            <ion-item lines="none">
+            <ion-item>
               <ion-label position="stacked">{{ 'Members of the selected hwconf:' | translate }}</ion-label>
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
                 id="memberFilter"></ion-input>
