--- a/src/app/protected/cranix/groups/details/members/group-members.page.html
+++ b/src/app/protected/cranix/groups/details/members/group-members.page.html
@@ -17,8 +17,8 @@
       <ion-grid>
         <ion-row>
           <ion-col size=12 sizeMd=12 sizeLg=5 sizeXl=5>
-            <ion-item lines="none">
-              <ion-label position="stacked">{{ 'members of the group' | translate }}</ion-label>
+            <ion-item>
+              <ion-label position="stacked">{{ 'Members of the group:' | translate }}</ion-label>
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
                 id="memberFilter"></ion-input>
             </ion-item>
@@ -37,8 +37,8 @@
             </ion-item>
           </ion-col>
           <ion-col size=12 sizeMd=12 sizeLg=5 sizeXl=5>
-            <ion-item lines="none">
-              <ion-label position="stacked">{{ 'available members' | translate }}</ion-label>
+            <ion-item>
+              <ion-label position="stacked">{{ 'Available members:' | translate }}</ion-label>
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onNonMemberFilterChanged()"
                 id="nonMemberFilter">
               </ion-input>
