--- a/src/app/protected/cranix/users/details/groups/user-groups.page.html
+++ b/src/app/protected/cranix/users/details/groups/user-groups.page.html
@@ -16,11 +16,12 @@
       <ion-grid>
         <ion-row>
           <ion-col size=12 sizeMd=12 sizeLg=5 sizeXl=5>
-            <ion-item lines="none">
-              <ion-label position="stacked">{{ 'member of groups' | translate }}</ion-label>
+            <ion-item>
+              <ion-label position="stacked">{{ 'Member of groups:' | translate }}</ion-label>
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
                 id="memberFilter"></ion-input>
             </ion-item>
+            <ion-item></ion-item>
             <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-balham" [gridOptions]="memberOptions"
               [rowData]="memberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="memberSelection"
               (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable">
@@ -36,12 +37,13 @@
             </ion-item>
           </ion-col>
           <ion-col size=12 sizeMd=12 sizeLg=5 sizeXl=5>
-            <ion-item lines="none">
-              <ion-label position="stacked">{{ 'available groups' | translate }}</ion-label>
+            <ion-item>
+              <ion-label position="stacked">{{ 'Available groups:' | translate }}</ion-label>
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onNonMemberFilterChanged()"
                 id="nonMemberFilter">
               </ion-input>
             </ion-item>
+            <ion-item></ion-item>
             <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-balham" [gridOptions]="noMemberOptions"
               [rowData]="noMemberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="noMemberSelection"
               (gridReady)="onNoMemberReady($event)" (selectionChanged)="onNoMemberSelectionChanged()"
